feat: реализовать функциональность запросов на вещи